3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Make damage done by area spells not depend on monster size.
include/sproto.h, server/attack.c: Add additional parameter "full_hit" to
   hit_map() and hit_player(). If set, do full damage, if unset scale down by
   monster size.
server/{apply.c, attack.c, disease.c, monster.c, player.c, rune.c,
spell_attack.c, spell_effect.c, spell_util.c, time.c}: Change callers to set
   "full_hit" parameter according to the attack used.
Andreas Kirschbaum 2005-10-07

common/{arch.c, object.c}, crossedit/{Attr.c, Defines.h, Edit.c},
include/libproto.h, server/{plugins.c, time.c}: Rename functions with
   mixed-case names to lower case only.
crossedit/Defines.h: Remove prototypes for nonexisting functions.
Andreas Kirschbaum 2005-10-07

server/apply.c: In prepare_weapon() do not lose a reference to the item name.
Andreas Kirschbaum 2005-10-06

include/sproto.h, server/shop.c - make value_limit static, change its
arguments to add some checking for NULL pointers
Brendan Lally 2005-10-06

server/monster.c: In move_monster() prevent hp/sp overflows for monsters with
   very high maxhp/maxsp and very high regeneration rates.
Andreas Kirschbaum 2005-10-05

common/treasure.c - prevent crashes with some broken treasure lists.
Brendan Lally 2005-10-05

server/shop.c: convert val to sint64 - compilation issues with Win32. Checked with
 patch author that it's fine.
Ryo 2005-10-04

common/map.c - fix output names in new_save_map
--
server/shop.c - don't assume that shop_specialisation_ratio only gets passed
items with valid types.
--
common/map.c - /actually/ fix pointer issue
--
common/map.c - fix potential issue with NULL pointer